--- a/V354/Protokoll.tex
+++ b/V354/Protokoll.tex
@@ -19,6 +19,7 @@
 \input{Theorie.tex}
 \input{D.tex}
 \input{Auswertung.tex}
+\input{Diskussion.tex}
 \printbibliography{}
 \nocite{*}
 \end{document}
