--- a/V351/Protokoll.tex
+++ b/V351/Protokoll.tex
@@ -18,6 +18,8 @@
 \newpage
 \input{Theorie.tex}
 \input{Durchfuerung.tex}
+\input{Auswertung.tex}
+\input{Diskussion.tex}
 \printbibliography{}
 \nocite{*}
 \end{document}
