--- a/V351/Theorie.tex
+++ b/V351/Theorie.tex
@@ -32,7 +32,7 @@ vorkommen.
 Eine Anforderung an die Funktion ist, dass sie stetig ist aber sie muss nicht unbedingt
 differenzierbar sein. Falls die Funktion an einer Stelle nicht stetig ist, wie zum
 Beispiel eine Rechteckspannung, dann wird an dieser Stelle immer eine gleich große Abweichung sein,
-wenn sie duch eine Fourier-Reihe beschrieben wird. \\\\
+wenn sie duch eine Fourier-Reihe beschrieben wird. Dies beschreibt das Gibbsche Phänomen. \\\\
 
 Das gesamte Frequenzsprektrum einer Funktion, die nicht periodisch sein muss, kann durch eine
 Fourier-Transformation ermittelt werden. Die Formel für diese Transformation ist in
@@ -44,9 +44,9 @@ Gleichung (\ref{eq:3}) dargestellt.
 \end{equation}
 
 Für eine periodische Funktion ergibt sich mit dieser Gleichung eine Reihe von
-\delta-Funktionen, also ein Linienspektrum. In Abbildung (\ref{fig:1}) ist ein
+$\delta$-Funktionen, also ein Linienspektrum. In Abbildung (\ref{fig:1}) ist ein
 solches Linienspektrum abgebildet. Da in Realität nicht unendlich lange gemessen werden kann,
-ergeben sich, anstatt \delta-Funktionen, ein Linienspektrum mit endlicher Breite.
+ergeben sich, anstatt $\delta$-Funktionen, ein Linienspektrum mit endlicher Breite.
 Bei nicht periodischen Funktionen ergibt sich ein kontinuierliches Spektrum.
 
 \begin{figure}[H]
