--- a/V351/Diskussion.tex
+++ b/V351/Diskussion.tex
@@ -1,3 +1,9 @@
 \section{Diskussion}
-Bei der Anaylse liegen die Werte im Toleranzbereich bis auf die Dreieckspannung.
-Die Abweichung liegen über $60 \%$. 
+Bei der Fourier-Analyse fällt auf, dass bei der Rechteckspannung hohe Abweichungen
+vorliegen. Möglicher Grund ist, dass bei der Messung
+ein Rauschen im Hintergrund zu sehen war und somit das Oszilloskop die Signale
+nicht richtig umwandeln konnte. Da die beiden anderen Spannungsformen im  Toleranzbereich
+liegen könnte bei der Rechteckspannung ein systematischer Fehler vorliegen.
+Bei der Fourier-Synthese sind gute Ergebnisse erzielt worden, was man an anhand der Bilder
+erkennen kann. Bei der Dreieckspannung ist die Synthese am besten gelungen, da die
+Amplitude mit den Faktor $\frac{1}{n^2}$ abfällt. 
