--- a/V351/Protokoll.tex
+++ b/V351/Protokoll.tex
@@ -19,6 +19,7 @@
 \input{Theorie.tex}
 \input{Durchfuerung.tex}
 \input{Auswertung.tex}
+\newpage
 \input{Diskussion.tex}
 \printbibliography{}
 \nocite{*}
