--- a/V354/lit.bib
+++ b/V354/lit.bib
@@ -1,10 +1,12 @@
 @manual{1,
   author = {TU Dortmund},
-  title = {Anleitung zum Versuch 354: Gedämpfte und erzwungene Schwinungen},
+  title = {Anleitung zum Versuch 353:  Das Relaxationsverhalten eines RC-
+Kreises},
   year = 2017
 }
+
 @manual{2,
   author = {TU Dortmund},
-  title = {Anleitung zum Versuch 353: Das Relaxationsverhalten eines RC-Kreises},
+  title = {Anleitung zum Versuch 354: Gedämpfte und erzwungene Schwinungen},
   year = 2017
 }
