--- a/V308/Protokoll.tex
+++ b/V308/Protokoll.tex
@@ -17,7 +17,7 @@
 \tableofcontents
 \newpage
 \input{Theorie.tex}
-\input{Durchführung.tex}
+\input{D.tex}
 \input{Auswertung.tex}
 \input{Diskussion.tex}
 \printbibliography{}
