--- a/V308/D.tex
+++ b/V308/D.tex
@@ -3,7 +3,7 @@ Zur Berechnung des Magnetfeldes der Spule wird eine Hall-Sonde verwendet.
 Die Hall-Sonde beruht auf dem Hall-Effekt. An der Spitze der Hall-Sonde befindet sich
 ein Leiterplättchen an das ein Strom angeschlossen ist. Durch ein Magnetfeld wirkt senkrecht
 auf die Ladung die Lorenzkraft und erzeugt ein Verschiebungsstrom und ebenfalls eine Spannung (Hall-Spannung).
-Mit Hilfe der Hall-Spannung kann die Stärke des Magnetfeldes, die von äußen erzeugt worden ist, messen.
+Mit Hilfe der Hall-Spannung kann die Stärke des Magnetfeldes, die von außen erzeugt worden ist, messen.
 In Abbildung (\ref{abb:4}) ist der Versuchsaufbau dargestellt, dabei wird eine longitudinal Sonde verwenden.
 Anschließend fährt die Sonde im Inneren der Magnetspule in verschiedenen Abstände ab und misst dabei das
 Magnetfeld.
@@ -14,8 +14,8 @@ Magnetfeld.
   \label{abb:4}
 \end{figure}
 Für die Messung des Magnetfeldes der Helmholz-Spule wird eine transversale Sonde verwendet.
-Dabei misst man sowohl im Inneren der beiden Spule als auch ausserhalb die Magnetfelder.
-In Abbildung (\ref{abb:5}) ist der Versuchaufbau dargestellt.
+Dabei misst man sowohl im Inneren der beiden Spule als auch außerhalb die Magnetfelder.
+In Abbildung (\ref{abb:5}) ist der Versuchsaufbau dargestellt.
 \begin{figure}[H]
   \centering
   \includegraphics[width=10cm, height= 7cm]{Abb5.png}
