--- a/V308/Theorie.tex
+++ b/V308/Theorie.tex
@@ -4,23 +4,23 @@ In diesem Versuch sollen Magnetfelder von verschiedener Spulenanordnung vermesse
 Magnetische Felder werden erzeugt, wenn sich elektrische Ladung bewegt.
 Dabei sind sie von Betrag und Richtung als Vektorgröße durch die magnetische Feldstärke
 $\vec{H}$ beschrieben. Wichtig zu erwähnen ist das Magnetfelder keine Monopole besitzen
-sondern immer paarweise auftreten und geschlossen sind im gegensatz zum elektrischen Feld.
+sondern immer paarweise auftreten und geschlossen sind im Gegensatz zum elektrischen Feld.
 Die magnetische Flussdichte $\vec{B}$ wird über die Feldstärke $\vec{H}$ und über die
-Permabilität $\mu$ zu der Formel:
+Permeabilität $\mu$ zu der Formel:
 \begin{equation}
   \vec{B} = \mu \cdot \vec{H}
   \label{eq:1}
 \end{equation}
-Dabei beschreibt die Permabilität $\mu$ die "Leitfähigkeit" des Materials und setzt sich
-aus $\mu = \mu_0 \cdot \mu_r$ zusammen. $\mu_0$ ist die Vakuum-Permeabilität und beträgtS $4 \cdot \pi \cdot 10^{-7}$
+Dabei beschreibt die Permeabilität $\mu$ die "Leitfähigkeit" des Materials und setzt sich
+aus $\mu = \mu_0 \cdot \mu_r$ zusammen. $\mu_0$ ist die Vakuum-Permeabilität und beträgt $4 \cdot \pi \cdot 10^{-7}$
 und $\mu_r$ die relative Permeabilität der Materie.
-Bei einem stromdurchflossenden Leiter verlaufen die Feldlinien in konzentrische Kreise und
+Bei einem stromdurchflossenen Leiter verlaufen die Feldlinien in konzentrische Kreise und
 stehen senkrecht zum Stromfluss. Mit Hilfe des Biot-Savartschen Gesetz lässt sich
 das Magnetfeld mit einem Abstand $r$ und dem Strom $I$
 \begin{equation*}
   d\vec{B} = \frac{\mu_0 I}{4\pi} \frac{d\vec{s} \times \vec{r}}{r^3}
 \end{equation*}
-berechnen. In Abbildung (\ref{abb:1}), folgt für den stromdurchflossenen Spule die Formel:
+berechnen. In Abbildung (\ref{abb:1}), folgt für die stromdurchflossene Spule die Formel:
 \begin{equation}
   \vec{B}(x) = \frac{\mu_0 I}{2} \frac{R^2}{(R^2 + x^2)^{\frac{3}{2}}}
   \label{eq:2}
@@ -32,15 +32,15 @@ berechnen. In Abbildung (\ref{abb:1}), folgt für den stromdurchflossenen Spule 
 	\label{abb:1}
 \end{figure}
 Im Inneren für langgestreckten Spule (Solenoid) ist die magnetische Feldstärke $\vec{H}$
-homogen und konstant während es ausserhalb inhomogen ist.
-Mit der Spulenlängen $l$, der Windungszahl $n$ und den Strom $I$ lässt sich das
+homogen und konstant während es außerhalb inhomogen ist.
+Mit der Spulenlänge $l$, der Windungszahl $n$ und den Strom $I$ lässt sich das
 homogene Magnetfeld mit der Formel
 \begin{equation}
   B = \mu_r \mu_0 \frac{n}{l} I
   \label{eq:3}
 \end{equation}
 darstellen. Wird die langgestreckte Spule zu einem Kreis gebogen so wird die Spulenanordnung
-als Torus bezeichnet. Die Besonderheit des Torus ist, dass ausserhalb kein Magnetfeld
+als Torus bezeichnet. Die Besonderheit des Torus ist, dass außerhalb kein Magnetfeld
 existiert und im Inneren das Magnetfeld homogen ist. Somit lässt sich die Gleichung(\ref{eq:3})
 mit $l= 2\pi r_T$ zu
 \begin{equation}
@@ -48,8 +48,8 @@ mit $l= 2\pi r_T$ zu
   \label{eq:4}
 \end{equation}
 umschreiben. Dabei ist $r_T$ der Radius des Torus.
-Ein anderes Verfahren zu Herrichtung eines homogen Magnetfeldes ist die Helmholz-Spule.
-Zwei parallele Kreisspulen, die die gleiche Stromrichtung besitzen, erzeugen ein homogens
+Ein anderes Verfahren zu Herrichtung eines homogenen Magnetfeldes ist die Helmholz-Spule.
+Zwei parallele Kreisspulen, die die gleiche Stromrichtung besitzen, erzeugen ein homogenes
 Feld im Inneren der beiden Spulen. Eine Darstellung ist in Abbildung(\ref{abb:2}) zu sehen.
 \begin{figure}[H]
   \centering
@@ -67,10 +67,10 @@ Ferromagnetische Materialien wie z.B. Eisen, Kobalt oder Nickel besitzen ohne ei
 ein permanentes magnetisches Moment. Magnetischen Momente richten sich in einzelnen Bereichen (Weißsche Bezirke)
 parallel zu einander aus. Ohne äußeres Feld ist die Ausrichtung der Weißschen Bezirke statisch verteilt.
 Mit einem äu0eren Magnetfeld gibt es eine Richtungsänderung und zu einer Vergrößerung des Bezirks.
-Dies wird solange ausgeführt bis alle magnetischen Momente mit der Ausrichtung vom Magenetfeld übereinstimmen.
+Dies wird solange ausgeführt bis alle magnetischen Momente mit der Ausrichtung vom Magnetfeld übereinstimmen.
 Für ferromagnetische Materialien ist die relative Permeabilität $\mu_r$ sehr hoch, somit ist die Gültigkeit der
 Gleichung (\ref{eq:1}) ungültig.
-Die Hysteresekurve bschreibt diese Nicht-linearität und ist in Abbildung (\ref{abb:3}) dargestellt.
+Die Hysteresekurve beschreibt diese Nicht-linearität und ist in Abbildung (\ref{abb:3}) dargestellt.
 \begin{figure}[H]
   \centering
   \includegraphics[width=10cm, height= 7cm]{Abb3.png}
@@ -80,7 +80,7 @@ Die Hysteresekurve bschreibt diese Nicht-linearität und ist in Abbildung (\ref{
 Liegt ein äußeres Magnetfeld an so wird die \textbf{1} in der Abbildung (\ref{abb:3}) eine
 Neukurve dargestellt. Sie erreicht nach einiger Zeit ein Sättigungswert $B_s$. Beim Abschalten
 des äußeren Magnetfeldes, bleibt noch beim Ferromagnet eine "Restmagnetisierung" die
-als Remanenz bezeichnet wird. Die \textbf{2} beschreibt die Koerzitivkraft um die Remanenz auf Null zu bekommen.
+als Remanenz bezeichnet wird. Die \textbf{2} beschreibt die Koerzitivkraft um die Remanenz auf null zu bekommen.
 Durch Erhöhung des Gegenfeldes wird ebenfalls ein negativen Sättigungswert erreicht.
 Die \textbf{3} zeigt den Kurvenverlauf durch Erhöhung des Magnetfeldes und sie ist symmetrisch zur Hysteresekurve.
 Somit wird die relative Permeabilität $\mu_r$ eine Funktion zur Feldstärke $\vec{H}$.
